<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SdkDemo</string>
    <string name="permisson_location_open">Open</string>
    <string name="permisson_location_title">Location access is not turned on</string>
    <string name="permisson_location_tips">Outdoor sports require authorized location information permissions</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Done</string>
    <string name="tips_title">Tips</string>
    <string name="main_home_page">Home</string>
    <string name="main_sdk_not_user">SDK cannot be used</string>
    <string name="main_unbind">Unbind</string>
    <string name="main_bind_device_connecr">Device bound(Connected)</string>
    <string name="main_bind_device_unconnected">Device bound(Unconnected)</string>
    <string name="main_mac_address">Bluetooth address：</string>
    <string name="main_pairing">Pairing device</string>
    <string name="main_no_pairing">No device Paired</string>
    <string name="main_device_unconnected">Device not connected</string>
    <string name="main_send_pairing">Send pairing code</string>
    <string name="main_get_device_info">Get device information</string>
    <string name="main_get_device_state">Get device status</string>
    <string name="main_get_user_info">Get the personal information</string>
    <string name="main_get_alarm_info">Get the alarm information</string>
    <string name="main_get_sedentary_info">Get sedentary information</string>
    <string name="main_get_target_info">Get target information</string>
    <string name="main_send_message">Message push</string>
    <string name="main_get_steps_and_heart">Gets the current number of steps and heart rate</string>
    <string name="main_get_steps_and_sleep_history">Gets the historical steps and sleep data</string>
    <string name="main_get_heart_and_blood_history">Gets the historical heart rate and blood pressure</string>
    <string name="main_set_heart_test">Set the heart rate detection switch</string>
    <string name="main_reset_device">Factory Reset</string>
    <string name="main_heart_warm">Heart rate alarm</string>
    <string name="main_heart_swith">Heart rate alarm declaration</string>
    <string name="main_heart_max_value">Heart rate alarm maximum</string>
    <string name="temp_warm_set">alarm settings</string>
    <string name="main_get_sport_data">Exercise Data</string>
    <string name="alarm_info_title">Alarm information</string>
    <string name="alarm_item_swith">Alarm switch：</string>
    <string name="alarm_item_cycle">Alarm cycle：</string>
    <string name="alarm_item_time">Alarm time：</string>
    <string name="alarm_item_type">Alarm type：</string>
    <string name="device_info_title">Device information</string>
    <string name="device_info_model">Device model：</string>
    <string name="device_info_address">Device address：</string>
    <string name="device_info_version">Device version：</string>
    <string name="device_info_power">Device power：</string>
    <string name="device_state_title">Device status</string>
    <string name="device_state_screen_brightness">Screen brightness：</string>
    <string name="device_state_bright_duration">Duration of bright screen：</string>
    <string name="device_state_theme">Theme：</string>
    <string name="device_state_language">Language：</string>
    <string name="device_state_unit">Unit：</string>
    <string name="device_state_time_system">Time system：</string>
    <string name="device_state_handle_up">Lift up the screen：</string>
    <string name="device_state_music_control">Music control：</string>
    <string name="device_state_messagr_swith">Message swith：</string>
    <string name="device_state_hand_hibits">Left and right hand habits：</string>
    <string name="target_info_title">Target information</string>
    <string name="target_info_sleep_swith">Sleep swith：</string>
    <string name="target_info_sleep_time">Sleep time：</string>
    <string name="target_info_steps_swith">Steps swith：</string>
    <string name="target_info_steps">Steps：</string>
    <string name="target_info_cal_swith">Calorie swith：</string>
    <string name="target_info_cal">Calorie：</string>
    <string name="target_info_distance_swith">Distance swith：</string>
    <string name="target_info_distance">Distance：</string>
    <string name="heart_test_title">Heart rate detection</string>
    <string name="heart_test_swith">Heart rate detection switch</string>
    <string name="heart_warm_title">Heart rate alarm</string>
    <string name="heart_warm_set">Set heart rate alarm</string>
    <string name="sendentary_info_title">Sedentary information alerts</string>
    <string name="sendentary_info_swith">Sedentary switch：</string>
    <string name="sendentary_info_start_time">Start time：</string>
    <string name="sendentary_info_end_title">End time：</string>
    <string name="sendentary_info_repet">Repetition period：</string>
    <string name="sendentary_info_cycle">Detection cycle time：</string>
    <string name="message_info_title">Message push</string>
    <string name="message_info_english">English message</string>
    <string name="message_info_french">French  message</string>
    <string name="message_info_spain">Spain  message</string>
    <string name="message_info_german">German  message</string>
    <string name="heart_history_title">Historical heart rate</string>
    <string name="heart_history_time">Time：</string>
    <string name="heart_history_rate">Heart rate：</string>
    <string name="heart_history_diastolic_pressure">Diastolic pressure：</string>
    <string name="heart_history_systolic_pressure">Systolic pressure：</string>
    <string name="scan_device_info_put_code">Input Pin code</string>
    <string name="scan_device_info_put_complete_code">Please enter the complete pairing code</string>
    <string name="scan_device_info_put_error">Wrong code input, please input again!</string>
    <string name="scan_device_blu_not_open">Bluetooth not on</string>
    <string name="scan_device_binding">Binding</string>
    <string name="scan_device_open_set">Please turn on Bluetooth for device connection</string>
    <string name="scan_device_set">Set</string>
    <string name="step_and_sleep_history_title">Historical steps and sleep data</string>
    <string name="step_history_title">Historical steps</string>
    <string name="cal_rating_title">Resting calorie data</string>
    <string name="sleep_history_title">Historical sleep</string>
    <string name="step_history_no_data">No historical step data</string>
    <string name="sleep_history_no_data">No historical sleep data</string>
    <string name="main_current_temp">Current body temperature</string>
    <string name="main_history_temp">Historical temperature data</string>
    <string name="main_set_temp_test">Set the temperature detection switch</string>
    <string name="main_update">Firmware update</string>
    <string name="main_temp_waring">Temperature alarm</string>
    <string name="main_temp_max_value">Maximum temperature alarm</string>
    <string name="step_history_time">Time</string>
    <string name="step_history_steps">Steps</string>
    <string name="step_history_cal">Calorie</string>
    <string name="step_history_distance">Distance</string>
    <string name="toast_set_success">Set up successfully</string>
    <string name="sleep_history_status">Sleep state</string>
    <string name="sport_info_title">Exercise Data</string>
    <string name="sport_info_time">Exercise time：</string>
    <string name="sport_info_duration">Duration of exercise：</string>
    <string name="sport_info_type">Exercise type：</string>
    <string name="sport_info_cal">Calorie：</string>
    <string name="sport_info_steps">Steps：</string>
    <string name="sport_info_dis">Distance：</string>
    <string name="sport_info_speed">Average pace：</string>
    <string name="sport_info_heart">Heart rate of exercise：</string>
    <string name="sport_info_no_heart">Heart rate of exercise：None</string>
    <string name="steps_current_title">The current step</string>
    <string name="steps_current_steps">Current step：</string>
    <string name="steps_current_cal">Current calorie：</string>
    <string name="steps_current_dis">Current distance：</string>
    <string name="steps_current_heart">Current heart rate：</string>
    <string name="steps_current_diastolic">Diastolic blood pressure：</string>
    <string name="steps_current_systolic">Systolic blood pressure：</string>
    <string name="user_info_title">Personal information</string>
    <string name="user_info_sex">Gender：</string>
    <string name="user_info_age">Age：</string>
    <string name="user_info_height">Height：</string>
    <string name="user_info_weight">Weight：</string>
    <string name="user_info_stride">Stride：</string>
    <string name="btn_submit">Query data</string>
    <string name="toast_info">Please fill in the completed information</string>
    <string name="temp_heandle">Wrist temperature：</string>
    <string name="temp_forehead">Forehead temperature：</string>
    <string name="temp_nodata">Current temperature: no temperature data</string>
    <string name="temp_current">Current temperature：</string>
    <string name="temp_test_swith">Temperature detection switch</string>
    <string name="commmon_no_data">No  data</string>
    <string name="permisson_phone_title">Phone permissions are not turned on</string>
    <string name="permisson_phone_tips">Call reminder requires authorized phone and address book permissions</string>
    <string name="permisson_sms_title">SMS permission is not turned on</string>
    <string name="permisson_sms_tips">SMS reminder needs to authorize SMS permission</string>
    <string name="permisson_notication_title">Notification bar permissions are not turned on</string>
    <string name="permisson_notication_tips">Open the notification bar permission, Runmifit can be notified normally</string>
    <string name="main_heart_min_value">Minimum value of heart rate alarm</string>
    <string name="main_fz_max_value">Diastolic pressure alarm maximum value</string>
    <string name="main_fz_min_value">Diastolic pressure alarm minimum value</string>
    <string name="main_ss_max_value">Systolic pressure alarm maximum value</string>
    <string name="main_ss_min_value">Systolic blood pressure alarm minimum value</string>
    <string name="main_oxygen_min_value">Minimum value of blood oxygen alarm</string>
    <string name="app_notice_title">"app" is running</string>
    <string name="app_notice_tips">Click to learn more or stop app</string>
    <string name="confirmed" >Confirm</string>
    <string name="nodical_upgrade">Nodical Upgrade</string>
    <string name="tailing_micro_upgrade">Tailing Micro upgrade</string>
    <string name="set_weather">Set weather</string>
    <string name="set_dial">Set dial</string>
    <string name="water_clock">water clock</string>
    <string name="do_not_disturb_mode">Do Not Disturb Mode</string>
    <string name="sport_mode">Sport mode</string>
    <string name="ecg_measurement">ECG measurement</string>
    <string name="at_heart_rate_reference">At heart rate reference</string>
    <string name="answering_and_ending_the_call">Answering and ending the call</string>
    <string name="set_time">Set time</string>
    <string name="set_vibration">Set Vibration</string>
    <string name="send_message">send message</string>
    <string name="handband_search_mobile_phone">Handband search mobile phone</string>
    <string name="history_sleep_data">History Sleep Data</string>
    <string name="start_upgrade">Start Upgrade</string>
    <string name="privilege_grant_failed">privilege grant failed</string>
    <string name="failed_to_download_file">Failed to download the upgrade file. Please try again</string>
    <string name="weather_unit">Weather unit</string>
    <string name="temperature">temperature</string>
    <string name="weather_type">Weather type</string>
</resources>