<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/tvMac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/font_14" />

            <Button
                android:id="@+id/btnSendPairing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_send_pairing" />

            <Button
                android:id="@+id/btnDeviceInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_device_info" />

            <Button
                android:id="@+id/btnDeviceState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_device_state" />

            <Button
                android:id="@+id/btnUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_user_info" />

            <Button
                android:id="@+id/btnAlarmInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_alarm_info" />

            <Button
                android:id="@+id/btnLongSitInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_sedentary_info" />

            <Button
                android:id="@+id/btnGoalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_target_info" />

            <Button
                android:id="@+id/btnNoticeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="get_device_notice"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnSendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_send_message"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnGetSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_steps_and_heart" />

            <Button
                android:id="@+id/btnGetSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_steps_and_sleep_history" />

            <Button
                android:id="@+id/btnGetRateHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_heart_and_blood_history" />

            <Button
                android:id="@+id/btnSetHeartTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_set_heart_test" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_reset_device" />

            <Button
                android:id="@+id/btnHeartWarn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_heart_warm" />

            <Button
                android:id="@+id/btnSportActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_get_sport_data" />

            <Button
                android:id="@+id/tvShowSleepsResting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/cal_rating_title" />

            <Button
                android:id="@+id/tvCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_current_temp" />

            <Button
                android:id="@+id/tvHistoryTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_history_temp" />

            <Button
                android:id="@+id/tvTempTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_set_temp_test" />

            <Button
                android:id="@+id/tvDfu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nodical_upgrade"
                android:visibility="gone" />

            <Button
                android:id="@+id/tvDfuOta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tailing_micro_upgrade" />

            <Button
                android:id="@+id/tvTempWaring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/main_temp_waring" />


            <Button
                android:id="@+id/tvWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/set_weather" />

            <Button
                android:id="@+id/tvSenfDialCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/set_dial" />


            <Button
                android:id="@+id/tvDrinkWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/water_clock" />

            <Button
                android:id="@+id/tvDisturb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/do_not_disturb_mode" />

            <Button
                android:id="@+id/tvSportMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sport_mode" />

            <Button
                android:id="@+id/tvEcg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ecg_measurement"
                android:visibility="gone" />

            <Button
                android:id="@+id/tvDatumLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/at_heart_rate_reference" />

            <Button
                android:id="@+id/tvTelepho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/answering_and_ending_the_call" />

            <Button
                android:id="@+id/tvSetTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/set_time" />

            <Button
                android:id="@+id/tvSetShock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/set_vibration" />

            <Button
                android:id="@+id/tvSendMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/send_message"
                android:visibility="visible" />

            <Button
                android:id="@+id/tvFindPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/handband_search_mobile_phone" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>